syntax = "proto3";

package sifnode.oracle.v1;

import "gogoproto/gogo.proto";

option go_package = "github.com/Sifchain/sifnode/x/oracle/types";

// NetworkID is a unique identifier for all chains that Sifchain
// enables.
enum NetworkID {
  // Not currently in use
  NETWORK_ID_UNSPECIFIED = 0;
  // Ethereum mainnet
  NETWORK_ID_ETHEREUM = 1;
  // Bitcoin mainnet
  NETWORK_ID_BITCOIN = 2;
  // Binance Smart Chain https://www.binance.org/en/smartChain
  NETWORK_ID_BINANCE_SMART_CHAIN = 3;
}
